Turns out the traditional family names were written in simplified!
This caused lots of misparsing of names. Now all the names are
written properly in traditional chars. Also, added a list of
Hong Kong names which use slightly different chars than other
forms of traditional.

--- a/js/data/locale/zh/Hant/HK/name.json
+++ b/js/data/locale/zh/Hant/HK/name.json
@@ -1,65 +1,4 @@
 {
-    "format": "{prefix}{familyName}{middleName}{givenName}{suffix}",
-    "nameStyle": "asian",
-    "conjunctions": {
-        "and1": "與",
-        "and2": "與",
-        "or1": "或",
-        "or2": "或"
-    },
-    "prefixes": [
-        "首席執行官",
-        "首席財務官",
-        "首席技術官",
-        "首席運營官",
-        "首席營運官",
-        "外甥女",
-        "堂哥",
-        "堂弟",
-        "堂姐",
-        "堂妹",
-        "表哥",
-        "表弟",
-        "表姐",
-        "表妹",
-        "全家",
-        "一家",
-        "姥爺",
-        "姥爺",
-        "外婆",
-        "叔父",
-        "嬸嬸",
-        "舅媽",
-        "嬸嬸",
-        "舅舅",
-        "舅媽",
-        "姨丈",
-        "姨父",
-        "姑媽",
-        "姑媽",
-        "姑父",
-        "姑丈",
-        "兒子",
-        "兒子",
-        "女兒",
-        "女兒",
-        "孫子",
-        "孫子",
-        "孫女",
-        "孫女",
-        "妹婿",
-        "嫂嫂",
-        "弟媳",
-        "侄子",
-        "侄女",
-        "外甥",
-        "老",
-        "小",
-        "和",
-        "與",
-        "與",
-        "及"
-    ],
     "suffixes": [
         "首席執行官",
         "首席財務官",
@@ -69,7 +8,7 @@
         "首席財務官",
         "首席技術官",
         "首席營運官",
-        "牙齒衛生員",
+        "牙齒衞生員",
         "總工程師",
         "總工程師",
         "高級督察",
@@ -296,8 +235,8 @@
         "戴": "Dài",
         "黨": "Dǎng1",
         "黨": "Dǎng2",
-        "澹臺": "Dàntái1",
-        "澹臺": "Dàntái2",
+        "澹台": "Dàntái1",
+        "澹台": "Dàntái2",
         "石": "Dàn",
         "達奚": "Dáxī",
         "笪": "Dá",
@@ -370,7 +309,7 @@
         "鞏": "Gǒng8",
         "公伯": "Gōngbó",
         "公乘": "Gōngchéng",
-        "公戶": "Gōnghù",
+        "公户": "Gōnghù",
         "公堅": "Gōngjiān",
         "公良": "Gōngliáng",
         "公門": "Gōngmén",
@@ -699,7 +638,7 @@
         "宿": "Sù",
         "拓拔": "Tàbá1",
         "拓跋": "Tàbá2",
-        "臺": "Tái1",
+        "台": "Tái1",
         "邰": "Tái2",
         "太史": "Tàishǐ2",
         "太叔": "Tàishū1",
@@ -730,16 +669,16 @@
         "韋": "Wéi2",
         "韋": "Wéi3",
         "隗": "Wěi4",
-        "衛": "Wèi5",
+        "衞": "Wèi5",
         "位": "Wèi6",
-        "衛": "Wèi7",
+        "衞": "Wèi7",
         "蔚": "Wèi8",
         "魏": "Wèi9",
         "尉遲": "Wèichí1",
         "尉遲": "Wèichí2",
         "微生": "Wēishēng",
-        "溫": "Wēn1",
-        "溫": "Wēn2",
+        "温": "Wēn1",
+        "温": "Wēn2",
         "文": "Wén3",
         "聞": "Wén4",
         "翁": "Wēng",
