Apparently compound family names are not common in Chinese.
Made compound family names optional. By default, they are not
turned on. Turning it on will cause some regular names that happen
to contain characters that are also family names not to be
parsed properly.

--- a/js/data/locale/zh/name.json
+++ b/js/data/locale/zh/name.json
@@ -5,6 +5,7 @@
 	},
 	"format": "{prefix}{familyName}{middleName}{givenName}{suffix}",
 	"nameStyle": "asian",
+	"noCompoundFamilyNames": true,
 	"conjunctions": {
 		"and1": "与",
 		"and2": "与",
