Implement Korean alphabeticIndex

--- a/js/data/locale/ko/collation.json
+++ b/js/data/locale/ko/collation.json
@@ -11,6 +11,7 @@
             3
         ],
         "keysize":[12,12,16,16],
+        "flowBoundaries":[27,45],
         "map": {
  			"A":[0],
 			"B":[1],
