Add 'indexUnits key in collation.json. Remove caseSensitve options

--- a/js/data/locale/ko/collation.json
+++ b/js/data/locale/ko/collation.json
@@ -11,6 +11,7 @@
             3
         ],
         "keysize":[12,12,16,16],
+        "indexUnits":["ㄱ","ㄲ","ㄴ","ㄷ","ㄸ","ㄹ","ㅁ","ㅂ","ㅃ","ㅅ","ㅆ","ㅇ","ㅈ","ㅉ","ㅊ","ㅋ","ㅌ","ㅍ","ㅎ"],
         "flowBoundaries":[27,45],
         "map": {
  			"A":[0],
