--- a/js/data/locale/lv/collation.json
+++ b/js/data/locale/lv/collation.json
@@ -4,6 +4,45 @@
 		"scripts": ["Latn"],
 		"bits": [6,3,1,1],
 		"keysize":[8,12,12,12],
+		"indexUnits":[
+			"A",
+			"Ā",
+			"B",
+			"C",
+			"Č",
+			"D",
+			"E",
+			"Ē",
+			"F",
+			"G",
+			"Ģ",
+			"H",
+			"I",
+			"Ī",
+			"J",
+			"K",
+			"Ķ",
+			"L",
+			"Ļ",
+			"M",
+			"N",
+			"Ņ",
+			"O",
+			"P",
+			"Q",
+			"R",
+			"Ŗ",
+			"S",
+			"Š",
+			"T",
+			"U",
+			"Ū",
+			"V",
+			"Z",
+			"Ž",
+			"W",
+			"X"
+		],
 		"flowBoundaries":[0,36],
 		"map": {
 			"A":[0],
