Added country name support for Kosovo (XK)

--- a/js/data/locale/countries.json
+++ b/js/data/locale/countries.json
@@ -170,6 +170,7 @@
     "republic of kenya": "KE",
     "kiribati": "KI",
     "korea, democratic people's republic of": "KP",
+    "kosovo": "XK",
     "democratic people's republic of korea": "KP",
     "dprk": "KP",
     "north korea": "KP",
