--- a/js/data/locale/nativecountries.json
+++ b/js/data/locale/nativecountries.json
@@ -292,6 +292,12 @@
     "vanuatu": "VU",
     "việt nam": "VN",
     "western sahara": "EH",
+    "republika e kosovës": "XK",
+    "република косово": "XK",
+    "republika kosovo": "XK",
+    "kosovës": "XK",
+    "косово": "XK",
+    "kosovo": "XK",
     "يمني": "YE",
     "zambia": "ZM",
     "zimbabwe": "ZW"
