Was missing the name to ISO code mappings of the Republic of Congo

--- a/js/data/locale/countries.json
+++ b/js/data/locale/countries.json
@@ -74,9 +74,16 @@
     "cocos & keeling islands": "CC",
     "colombia": "CO",
     "comoros": "KM",
-    "congo": "CD",
+    "congo": "CG",
+    "congo-brazzaville": "CG",
+    "west congo": "CG",
+    "congo republic": "CG",
+    "congo, the democratic republic of": "CD",
+    "congo, democratic republic of": "CD",
     "congo, the democratic republic of the": "CD",
     "congo, democratic republic of the": "CD",
+    "the democratic republic of congo": "CD",
+    "democratic republic of congo": "CD",
     "the democratic republic of the congo": "CD",
     "democratic republic of the congo": "CD",
     "drc": "CD",
