Fixed indentation for collation.json data. create symbols property in root collation.json

--- a/js/data/locale/collation.json
+++ b/js/data/locale/collation.json
@@ -17,6 +17,58 @@
 			"9":[9]
 		}
 	},
+	"symbols": {
+		"\t": [0],
+		"\n": [0,1],
+		"\u000C": [0,2],
+		" ": [0,3],
+		"!": [1],
+		"\"": [2],
+		"#": [3],
+		"$": [4],
+		"%": [5],
+		"&": [6],
+		"'": [7],
+		"(": [8],
+		")": [9],
+		"*": [10],
+		"+": [11],
+		",": [12],
+		"-": [13],
+		".": [14],
+		"/": [15],
+		":": [26],
+		";": [27],
+		"<": [28],
+		"=": [29],
+		">": [30],
+		"?": [31],
+		"@": [32],
+		"[": [33],
+		"\\": [34],
+		"]": [35],
+		"^": [36],
+		"_": [37],
+		"`": [38],
+		"{": [39],
+		"|": [41],
+		"}": [42],
+		"~": [43],
+		"": [44],
+		"[": [59],
+		"\\": [60],
+		"]": [61],
+		"^": [62],
+		"_": [63],
+		"`": [64],
+		"{": [65],
+		"|": [66],
+		"}": [67],
+		"~": [68],
+		"": [69],
+		"₩": [283],
+		"￦": [283,0,0,1]
+	},
 	"ascii": {
 		"scripts": ["Latn"],
 		"bits": [6,2,0,0],
