--- a/js/data/locale/is/sysres.json
+++ b/js/data/locale/is/sysres.json
@@ -120,5 +120,73 @@
     "1#1 dy|#{num} dys": "#{num} da",
     "durationMediumWeeks": "#{num} vi",
     "1#1 mo|#{num} mos": "#{num} má",
-    "durationMediumYears": "#{num} ár"
+    "durationMediumYears": "#{num} ár",
+    // past
+    "1#-1 millisecond|#-{num} milliseconds": "one#-{num} millisekúnda|#{num} millisekúndur",
+    "1#-1 second|#-{num} seconds": "one#{num} sekúndu|#{num} sekúndum",
+    "1#-1 minute|#-{num} minutes": "one#{num} mínútu|#{num} mínútum",
+    "1#-1 hour|#-{num} hours": "one#{num} klukkustund|#{num} klukkustundum",
+    "1#-1 day|#-{num} days": "one#{num} degi|#{num} dögum",
+    "1#-1 week|#-{num} weeks": "one#{num} viku|#{num} vikum",
+    "1#-1 month|#-{num} months": "one#{num} mánuð|#{num} mánuði ",
+    "1#-1 year|#-{num} years": "one#{num} ári|#{num} árum",
+    "#-{num} ms": "one#{num} ms|#{num} ms",
+    "1#-1 sec|#-{num} sec": "one#{num} sek.|#{num} sek.",
+    "1#-1 min|#-{num} min": "one#{num} mín.|#{num} mín.",
+    "1#-1 hr|#-{num} hrs": "one#{num} klst.|#{num} klst.",
+    "-durationLongDays": "one#{num} dagur|#{num} dagar",
+    "1#-1 wk|#-{num} wks": "one#{num} viku|#{num} vikum",
+    "1#-1 mon|#-{num} mons": "one#{num} mán.|#{num} mán.",
+    "1#-1 yr|#-{num} yrs": "one#{num} árum|#{num} árum",
+    "-durationShortMillis": "one#{num}ms|#{num}ms",
+    "#-{num}s": "one#{num} sek.|#{num} sek.",
+    "-durationShortMinutes": "one#{num} mín.|#{num} mín.",
+    "#-{num}h": "one#{num} klst.|#{num} klst.",
+    "#-{num}d": "one#{num} d.|#{num} d.",
+    "#-{num}w": "one#{num} v.|#{num} v.",
+    "-durationShortMonths": "one#{num} mán.|#{num} mán.",
+    "#-{num}y": "one#{num}á|#{num}á",
+    "-durationMediumMillis": "one#{num}ms|#{num}ms",
+    "1#-1 se|#-{num} sec": "#{num} se",
+    "1#-1 mi|#-{num} min": "#{num} mí",
+    "-durationMediumHours": "#{num} kl",
+    "1#-1 dy|#-{num} dys":  "one#{num} degi|#{num} dögum",
+    "-durationMediumWeeks": "#{num} vikum",
+    "1#-1 mo|#-{num} mos": "#{num} má",
+    "-durationMediumYears": "#{num} árum",
+    // future
+    "in {relativeTime}": "eftir {relativeTime}",
+    "{relativeTime} ago": "fyrir {relativeTime}",
+    "1#+1 millisecond|#+{num} milliseconds": "one#{num} millisekúnda|#{num} millisekúndur",
+    "1#+1 second|#+{num} seconds": "one#{num} sekúndu|#{num} sekúndur",
+    "1#+1 minute|#+{num} minutes": "one#{num} mínútu|#{num} mínútur",
+    "1#+1 hour|#+{num} hours": "one#{num} klukkustund|#{num} klukkustundir",
+    "1#+1 day|#+{num} days": "one#{num} dag|#{num} daga",
+    "1#+1 week|#+{num} weeks": "one#{num} viku|#{num} vikur",
+    "1#+1 month|#+{num} months": "one#{num} mánuður|#{num} mánuðir",
+    "1#+1 year|#+{num} years": "one#{num} ár|#{num} ár",
+    "#+{num} ms": "one#{num} ms|#{num} ms",
+    "1#+1 sec|#+{num} sec": "one#{num} sek.|#{num} sek.",
+    "1#+1 min|#+{num} min": "one#{num} mín.|#{num} mín.",
+    "1#+1 hr|#+{num} hrs": "one#{num} klst.|#{num} klst.",
+    "durationLongDays": "one#{num} dagur|#{num} dagar",
+    "1#+1 wk|#+{num} wks": "one#{num} vikur|#{num} vikur",
+    "1#+1 mon|#+{num} mons": "one#{num} mán.|#{num} mán.",
+    "1#+1 yr|#+{num} yrs": "one#{num} ár|#{num} ár",
+    "+durationShortMillis": "one#{num}ms|#{num}ms",
+    "#+{num}s": "one#{num} sek.|#{num} sek.",
+    "durationShortMinutes": "one#{num} mín.|#{num} mín.",
+    "#+{num}h": "one#{num} klst.|#{num} klst.",
+    "#+{num}d": "one#{num} d.|#{num} d.",
+    "#+{num}w": "one#{num} v.|#{num} v.",
+    "+durationShortMonths": "one#{num} mán.|#{num} mán.",
+    "#+{num}y": "one#{num}á|#{num}á",
+    "+durationMediumMillis": "one#{num}ms|#{num}ms",
+    "1#+1 se|#+{num} sec": "#{num} se",
+    "1#+1 mi|#+{num} min": "#{num} mí",
+    "+durationMediumHours": "#{num} kl",
+    "1#+1 dy|#+{num} dys": "one#{num} dag|#{num} daga",
+    "+durationMediumWeeks": "#{num} vikur",
+    "1#+1 mo|#+{num} mos": "#{num} má",
+    "+durationMediumYears": "#{num} ár"
 }
