--- a/js/data/locale/charset/Big5-HKSCS.json
+++ b/js/data/locale/charset/Big5-HKSCS.json
@@ -3,5 +3,5 @@
 	"min": 1,
 	"max": 2,
 	"scripts": ["Hant", "Hani", "Latn", "Grek", "Cyrl", "Bopo", "Hrkt", "Hira", "Kana", "Jpan"],
-	"locales": ["zh-Hant", "HK"]
+	"locales": ["zh-Hant"]
 }
