--- a/js/data/locale/charset/ISO-8859-2.json
+++ b/js/data/locale/charset/ISO-8859-2.json
@@ -1,5 +1,6 @@
 {
 	"min": 1,
 	"max": 1,
-	"scripts": ["Latn"]
+	"scripts": ["Latn"],
+  "locales": ["hr", "cz", "et", "hu", "lv", "lt", "pl", "ro", "sk", "sl"]
 }
