--- a/js/data/locale/charset/mac-cyrillic.json
+++ b/js/data/locale/charset/mac-cyrillic.json
@@ -1,5 +1,6 @@
 {
 	"min": 1,
 	"max": 1,
-	"scripts": ["Cyrl", "Latn"]
+	"scripts": ["Cyrl", "Latn"],
+  "locales": ["bg", "be", "mk", "ru", "sr", "uk"]
 }
