Add defaults data for some locales that has no data in CLDR

--- a/js/data/locale/ku/sysres.json
+++ b/js/data/locale/ku/sysres.json
@@ -177,5 +177,47 @@
     "#{num}y": "#{num}س",
     "durationMediumYears": "#{num} سا",
     "1#1 yr|#{num} yrs": "#{num} ساڵ",
-    "1#1 year|#{num} years": "#{num} ساڵ"
+    "1#1 year|#{num} years": "#{num} ساڵ",
+    "#{num}s ago": "لەمەوبەر {num}چ",
+    "1#1 sec ago|#{num} sec ago": "#لەمەوبەر {num} چر",
+    "1#1 second ago|#{num} seconds ago": "#لەمەوبەر {num} چرکە",
+    "#{num}mi ago": "#لەمەوبەر {num}خ",
+    "1#1 min ago|#{num} min ago": "#لەمەوبەر {num} خو",
+    "1#1 minute ago|#{num} minutes ago": "#لەمەوبەر {num} خولەک",
+    "#{num}h ago": "#لەمەوبەر {num}ک",
+    "1#1 hr ago|#{num} hrs ago": "#لەمەوبەر {num} کات",
+    "1#1 hour ago|#{num} hours ago": "#لەمەوبەر {num} کاتژمێر",
+    "#{num}d ago": "#لەمەوبەر {num}ر",
+    "1#1 dy ago|#{num} dys ago": "#لەمەوبەر {num} رۆ",
+    "1#1 day ago|#{num} days ago": "#لەمەوبەر {num} رۆژ",
+    "#{num}w ago": "#لەمەوبەر {num}ه",
+    "1#1 wk ago|#{num} wks ago": "#لەمەوبەر {num} هە",
+    "1#1 week ago|#{num} weeks ago": "#لەمەوبەر {num} هەفتە",
+    "#{num}mo ago": "#لەمەوبەر {num}م",
+    "1#1 mon ago|#{num} mons ago": "#لەمەوبەر {num} ما",
+    "1#1 month ago|#{num} months ago": "#لەمەوبەر {num} مانگ",
+    "#{num}y ago": "#لەمەوبەر {num}س",
+    "1#1 yr ago|#{num} yrs ago": "#لەمەوبەر {num} سا",
+    "1#1 year ago|#{num} years ago": "#لەمەوبەر {num} ساڵ",
+    "#in {num}s": "#{num}چ لە",
+    "1#in 1 sec|#in {num} sec": "#{num} چر لە",
+    "1#in 1 second|#in {num} seconds": "#{num} چرکە لە",
+    "#in {num}mi": "#{num}خ لە",
+    "1#in 1 min|#in {num} min": "#{num} خو لە",
+    "1#in 1 minute|#in {num} minutes": "#{num} خولەک لە",
+    "#in {num}h": "#{num}ک لە",
+    "1#in 1 hr|#in {num} hrs": "#{num} کات لە",
+    "1#in 1 hour|#in {num} hours": "#{num} کاتژمێر لە",
+    "#in {num}d": "#{num}ر لە",
+    "1#in 1 dy|#in {num} dys": "#{num} رۆ لە",
+    "1#in 1 day|#in {num} days": "#{num} رۆژ لە",
+    "#in {num}w": "#{num}ه لە",
+    "1#in 1 wk|#in {num} wks": "#{num} هە لە",
+    "1#in 1 week|#in {num} weeks": "#{num} هەفتە لە",
+    "#in {num}mo": "#{num}م لە",
+    "1#in 1 mon|#in {num} mons": "#{num} ما لە",
+    "1#in 1 month|#in {num} months": "#{num} مانگ لە",
+    "#in {num}y": "#{num}س لە",
+    "1#in 1 yr|#in {num} yrs": "#{num} سا لە",
+    "1#in 1 year|#in {num} years": "#{num} ساڵ لە"
 }
