Start supporting usages
Still not working yet, and needs more unit tests.

--- a/js/data/locale/unitfmt.json
+++ b/js/data/locale/unitfmt.json
@@ -436,6 +436,7 @@
                 "uscustomary": ["inch", "foot"],
                 "imperial": ["inch", "foot"]
             },
+            "maxFractionDigits": 2,
             "style": "list"
         },
         "vehicleDistance": {
